--- a/instellingen.html
+++ b/instellingen.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Instellingen</title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/profiel.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/instellingen.css" rel="stylesheet">
     <link href="css/iconfont.css" rel="stylesheet">
@@ -22,7 +23,7 @@
     <div class="instellingen">
         <div class="profile">
             <img src="img/IMG_0964.jpg" alt="Profiel Afbeelding">
-            <a href="profielstudent.html"><p>Michael Calewaert</p></a>
+            <a href="profielstudent.html"><p id="name">Michael Calewaert</p></a>
         </div>
         
         <div class="profile">
