--- a/profielstudentbewerken.html
+++ b/profielstudentbewerken.html
@@ -4,13 +4,14 @@
     
 <head>
     <meta charset="utf-8">
-    <title>vacatureDetail</title>    
+    <title>Profiel Bewerken</title>    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/iconfont.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/profielstudentbewerken.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+    <script src="js/profiel.js"></script>
     <script src="js/profielstudentbewerken.js"></script>
 </head>
     
@@ -23,49 +24,51 @@
         <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
     </div>
     <div class="beschrijving">
-    <p class="details">Michael Calewaert</p>
+    <p class="details" id="name">Michael Calewaert</p>
     </div>
     <div class="line">
     <h3>Geboortedatum</h3>
         <img class="bewerkinformatiedatum" src="img/Edit-128.png" alt="Naam Wijzigen">
     </div>
     <div class="beschrijving">
-    <p class="details">12 Maart 1994</p>
+    <p class="details" id="birthdate">12 Maart 1994</p>
     </div>
     <div class="line">
     <h3>Adres</h3>
         <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
     </div>
     <div class="beschrijving">
-    <p class="details">Diedonken 6<br>2820 Bonheiden<br>België</p>
+        <p id="street">Diedonken 6</p>
+        <p id="town">2820 Bonheiden</p>
+        <p id="country">België</p>
     </div>
         <div class="line">
     <h3>Email</h3>
         <img class="bewerkinformatieemail" src="img/Edit-128.png" alt="Naam Wijzigen">
     </div>
     <div class="beschrijving">
-    <p class="details">michael.calewaert@gmail.com</p>
+    <p class="details" id="email">michael.calewaert@gmail.com</p>
     </div>
         <div class="line">
     <h3>Studierichting</h3>
         <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
     </div>
     <div class="beschrijving">
-    <p class="details">Multimedia en Communicatietechnologie</p>
+    <p class="details" id="study">Multimedia en Communicatietechnologie</p>
     </div>
               <div class="line">
     <h3>Beschrijving</h3>
         <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
     </div>
     <div class="beschrijving">
-    <p class="details">Ik ben Michael Calewaert, ik ben een student Multimedia &amp; CommunicatieTechnologie. Ben vooral geïnteresseerd in Web Devolopmentie. Lorum isporum dieojs kitchi woki pant in da kori tijd in de vori met anissa chilling in de jente holie met zijn bassie zuster en steven die hardie werkie in de kori. Basi in de pc zaalie korie. zerie geintereseerfdie in de applie watchie. Wholla kullir habedoedie in tha annisie macbook proie. Ik willie nieie in die bakkie vliegie omdatikie metie drugsie was aant het trollie rollie.</p>
+    <p class="details" id="about">Ik ben Michael Calewaert, ik ben een student Multimedia &amp; CommunicatieTechnologie. Ben vooral geïnteresseerd in Web Devolopmentie. Lorum isporum dieojs kitchi woki pant in da kori tijd in de vori met anissa chilling in de jente holie met zijn bassie zuster en steven die hardie werkie in de kori. Basi in de pc zaalie korie. zerie geintereseerfdie in de applie watchie. Wholla kullir habedoedie in tha annisie macbook proie. Ik willie nieie in die bakkie vliegie omdatikie metie drugsie was aant het trollie rollie.</p>
     </div>
                 <div class="line">
     <h3>Rijksregisternummer</h3>
         <img class="bewerkinformatienummer" src="img/Edit-128.png" alt="Naam Wijzigen">
     </div>
     <div class="beschrijving">
-    <p class="details">94031254356</p>
+    <p class="details" id="regNumber">94031254356</p>
     </div>
                 <div class="line">
     <h3>Rijbewijs</h3>
