anchor fix vacatures WG

--- a/vacaturesWN.html
+++ b/vacaturesWN.html
@@ -36,19 +36,24 @@
             </ul>
         </nav>
         <div class="jobvacatures">
-            <h2 class="distance">In de omgeving van <span>5</span> km </h2>
-            <div class="vacature">
-                <img class="ster" src="img/sterleeg.png" alt="star">
-                <h3>Sales Associate</h3> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
-                <p class="datum">Verloopt 29/05/2015</p>
-            </div>
-            <div class="vacature">
-                <img class="ster" src="img/sterleeg.png" alt="star">
-                <h3>Sales Associate</h3> 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
-                <p class="datum">Verloopt 29/05/2015</p>
-            </div>
+            <section id="5km">
+                <h2 class="distance">In de omgeving van <span>5</span> km </h2>
+                <!--
+                <div class="vacature">
+                    <img class="ster" src="img/sterleeg.png" alt="star">
+                    <h3>Sales Associate</h3> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                    <p class="datum">Verloopt 29/05/2015</p>
+                </div>
+                
+                <div class="vacature">
+                    <img class="ster" src="img/sterleeg.png" alt="star">
+                    <h3>Sales Associate</h3> 
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
+                    <p class="datum">Verloopt 29/05/2015</p>
+                </div>
+                -->
+            </section>
             <h2 class="distance">In de omgeving van <span>10</span> km</h2>
             <div class="vacature">
                 <img class="ster" src="img/sterleeg.png" alt="star">
@@ -61,8 +66,9 @@
                 <h3>Sales Associate</h3> 
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium cumque expedita et eligendi facilis dolor molestiae, velit nisi iure. Corporis unde ad consequuntur cupiditate nobis, aliquam quos eveniet dolor ut.</p> 
                 <p class="datum">Verloopt 29/05/2015</p>
-            </div>  
+            </div>
         </div>
+        
         <div class="stagevacatures">
             <h2 class="distance">In de omgeving van <span>5</span> km</h2>
             <div class="vacature">
