--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#48CFAD">
     <title>Login</title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
@@ -13,7 +14,7 @@
 </head>
 
 <body>
-    <img class="logo" src="img/LOGO2.png" alt="Logo SosJobs">
+    <img class="logo" src="img/SOSjobs_logo_1024x1024.png" alt="Logo SosJobs">
 
     <form>
         <input class="empty" type="text" name="login" placeholder="E-mail">
