--- a/vacatures_wg.html
+++ b/vacatures_wg.html
@@ -21,12 +21,20 @@
     <script src="js/vacatures_wg.js"></script>
 </head>
 <body>
+
     <div class="wrapper">
    
     <header>
         <h1>Vacatures</h1>
         <a href="vacatureAanmaken.html"><div class="plusKnop"><img src="img/plus.png" alt="add"></div></a>
     </header>
+        <div class="spinner">
+  <div class="rect1"></div>
+  <div class="rect2"></div>
+  <div class="rect3"></div>
+  <div class="rect4"></div>
+  <div class="rect5"></div>
+</div>
     <div class="vacatures">
         <section id="lopende">
             <header><h2>Lopende vacatures</h2></header>
