--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <img class="logo" src="img/SOSjobs_logo_1024x1024.png" alt="Logo SosJobs">
 
     <form>
-        <select>
+        <select id="gebruiker">
             <option value="nvt">Kies je gebruikersaccount</option>
             <option value="Rachouan">Rachouan Rejeb</option>
             <option value="Siemen">Siemen Gijbels</option>
@@ -36,10 +36,8 @@
     <a class="accountLink" href="#">Wachtwoord vergeten?</a>
     <a class="accountLink" href="registreren.html">Nog geen account? Registreer hier!</a>
 
-    <a class="login" href="vacatures_wg.html">LoginWG</a>
-    <a class="login" href="vacaturesWN.html">LoginWN</a>
-    <a class="facebookLogin" href="#">
-    <img src="img/Facebook-128%20wit.png" alt="icon facebook"  class="fbIcoon">Log in met Facebook</a>
+    <a id="login" href="vacatures_wg.html">Login</a>
+
 
 </body>
 
