--- a/instellingen.html
+++ b/instellingen.html
@@ -77,7 +77,7 @@
         </div>
         
         <div id="afmelden">
-            <p>Afmelden</p>
+            <p><a href="index.html">Afmelden</a></p>
         </div>
         
     <nav id="hoofdNav">
