--- a/chatbox.html
+++ b/chatbox.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>berichten</title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
-
+    <script src="js/return.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/chatbox.css" rel="stylesheet">
 
@@ -30,7 +30,7 @@
         
         <div class="chatLinks">
             <div class="box">
-                <p>Kun je komen werken van 10h-12h?</p>
+                <p>Kan je komen werken van 10h-12h?</p>
             </div>
         </div>
        
