--- a/likeons.html
+++ b/likeons.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <title></title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/return.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/likeons.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
