--- a/registreren.html
+++ b/registreren.html
@@ -15,7 +15,7 @@
 </head>
     
 <body>
-    <img src="img/LOGO2.png" alt="Logo SosJobs">
+    <img src="img/SOSjobs_logo_1024x1024.png" alt="Logo SosJobs">
     <div class="midden">
     <p id="student">Student</p>
     <!--https://proto.io/freebies/onoff/-->
@@ -37,7 +37,7 @@
             <option value="female">Vrouw</option>
         </select>
         <input id="email" type="email" placeholder="Email">
-        <input id="paswoord"type="password" placeholder="Wachtwoord">
+        <input id="paswoord" type="password" placeholder="Wachtwoord">
         <input id="paswoord2" type="password" placeholder="Bevestig wachtwoord">
         <input id="rijksregisternummer" type="number" placeholder="Rijksregisternummer">
         <input id="geboortedatum" type="date" placeholder="Geboortedatum">
