--- a/vacatureAanmaken.html
+++ b/vacatureAanmaken.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Vacature</title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/return.js"></script>
     
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/iconfont.css" rel="stylesheet">
