--- a/profielstudent.html
+++ b/profielstudent.html
@@ -9,6 +9,7 @@
     <link href="css/iconfont.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     <script src="js/profiel.js"></script>
+    <script src="js/return.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/profielstudent.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
