--- a/profielwerkgever.html
+++ b/profielwerkgever.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/iconfont.css" rel="stylesheet">
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/return.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/profielwerkgever.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
