--- a/vacaturedetail.html
+++ b/vacaturedetail.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>vacatureDetail</title>
     <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="js/return.js"></script>
     <link href="css/algemene.css" rel="stylesheet">
     <link href="css/vacaturedetail.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
