foto's per user + inloggen extra optie

--- a/instellingenWG.html
+++ b/instellingenWG.html
@@ -76,7 +76,7 @@
         </div>
         
         <div id="afmelden">
-            <p>Afmelden</p>
+            <p><a href="index.html">Afmelden</a></p>
         </div>
         
     <nav id="hoofdNav">
