--- a/profielstudent.html
+++ b/profielstudent.html
@@ -25,7 +25,7 @@
         </div>
         <div id="profiel">
             <div class="profielimage">
-    <img src="img/Bedrijven.jpg" alt="profielafbeelding">
+    <img id="profielimgstudent" src="img/Bedrijven.jpg" alt="profielafbeelding">
             </div>
     <h3 id="name">Michael Calewaert</h3>
     <h4 id="birthdate">12 Maart 1994</h4>
