Facebook button is terug!!!

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <a class="accountLink" href="registreren.html">Nog geen account? Registreer hier!</a>
 
     <a id="login" href="vacatures_wg.html">Login</a>
-
+    <a class="facebookLogin" href="#">
+    <img src="img/Facebook-128%20wit.png" alt="icon facebook"  class="fbIcoon">Log in met Facebook</a>
 
 </body>
 
