--- a/instellingen.html
+++ b/instellingen.html
@@ -22,7 +22,7 @@
     <header><h1>Instellingen</h1></header>
     <div class="instellingen">
         <div class="profile">
-            <img src="img/IMG_0964.jpg" alt="Profiel Afbeelding">
+            <img src="img/IMG_0964.jpg" alt="Profiel Afbeelding" id="profielimgstudent">
             <a href="profielstudent.html"><p id="name">Michael Calewaert</p></a>
         </div>
         
