--- a/profielstudentbewerken.html
+++ b/profielstudentbewerken.html
@@ -19,7 +19,7 @@
 <body>
     <header><a href="instellingen.html"><div class="terugKnop"><img src="img/terug.png"></div></a><h1>Profiel bijwerken</h1></header>
     <div class="wrapper">
-    <img id="profielimg" src="img/IMG_0964.jpg" alt="Profiel Foto">
+    <img id="profielimg profielimgstudent" src="img/IMG_0964.jpg" alt="Profiel Foto">
     <div class="line">
     <h3>Naam</h3>
         <img class="bewerkinformatie" src="img/Edit-128.png" alt="Naam Wijzigen">
